Please see NEWS for a summary of changes since the last release suitable
for announcements.

* Thu Nov 8 2012 Thunor <thunorsif@hotmail.com>
- Modified the table widget's output data format: now all of the columns
  are output.
- Updated the pfeme, pfontview and playmusic example applications.

* Wed Nov 7 2012 Thunor <thunorsif@hotmail.com>
- Modified the tree widget's output data format: now all of the columns
  are output in the raw state "icon-name | stock-id | data0 | data1 ..."
  whether or not icon-name or stock-id were supplied.

* Thu Nov 1 2012 Thunor <thunorsif@hotmail.com>
- Connected-up the button-press/release-event signals to the
  comboboxentry widget's child entry widget.

* Tue Oct 16 2012 Thunor <thunorsif@hotmail.com>
- Added an example application Pfeme.

* Fri Oct 12 2012 Thunor <thunorsif@hotmail.com>
- Added an example application Pfontview.

* Fri Sep 21 2012 Thunor <thunorsif@hotmail.com>
- Version 0.8.2 released (r455)

* Fri Sep 21 2012 Thunor <thunorsif@hotmail.com>
- Added an inotify alternative to the GIO file monitor which is very
  fast but unfortunately there's a 128 file descriptor limit so I've
  disabled it in configure.in.
- Fixed examples/miscellaneous/stock_icon_test: newlines in item.
- Updated the documentation.

* Thu Sep 20 2012 Thunor <thunorsif@hotmail.com>
- Removed rate-limit from docs as it means "the rate limit to which the
  monitor will report consecutive change events to the same file" and
  not the initial response time as I mistakenly thought. The initial
  response time doesn't appear to be configurable.
- Tweaked configure.in.
- Added examples/pixmap/pixmap_auto_refresh.
- Added examples/pixmap/pixmap_file_monitor.
- Updated the README.

* Wed Sep 19 2012 Thunor <thunorsif@hotmail.com>
- Added BUILD_DETAILS to the help string.
- Updated the copyright notices.
- Added support for the auto-refresh tag attribute to all widgets that
  currently support file monitors. Auto refreshing can be faster for