@@ -1,6 +1,9 @@
 Please see NEWS for a summary of changes since the last release suitable
 for announcements.
 
+* Sat Nov 10 2012 Thunor <thunorsif@hotmail.com>
+- Fixed refreshing text widget with markup not showing markup.
+
 * Thu Nov 8 2012 Thunor <thunorsif@hotmail.com>
 - Modified the table widget's output data format: now all of the columns
   are output.
